@@ -6,3 +6,4 @@
 .deps
 Makefile
 Makefile.in
+slotcallbacks.moc.h
